tests/paczka1/fuzzy1/69004821.err
Error in line 6: S139 A252 19,7
Error in line 12: hueM3R5pZ S139 29,66
Error in line 2: hueM3R5pZ A324 92,8
Error in line 24: PXTVW20tz A324 12,6
Error in line 22: 5gPuJ9b A633 138,5
Error in line 30: PXTVW20tz A252 1,3
